# Device-Hopping-Paper

./: .gitignore  CMakeLists.txt  LICENSE-CUDPP.txt  LICENSE-Rodinia  LICENSE-SHOC.txt  README.md  build.sh  run_benchmarks.sh  run_daemon.sh
benchmarks/: CMakeLists.txt  device_hog.cpp  device_hog.h  rodinia_btree_find_k.cpp  rodinia_btree_find_range.cpp  rodinia_nn.cpp  shoc_fft.cpp  shoc_gemm_nn.cpp  shoc_ifft.cpp  shoc_md5hash.cpp  shoc_reduction.cpp  shoc_spmv_scalar.cpp
benchmarks/rodinia_src/btree/: common.cpp  common.h  kernel_gpu_cuda_wrapper.cu  kernel_gpu_cuda_wrapper_2.cu
benchmarks/rodinia_src/btree/util/timer/: timer.cpp  timer.h
benchmarks/shoc_src/: fftlib.h  shoc_fft.cl  spmv_util.h
daemon/: CMakeLists.txt  daemon.cpp  daemon.h  daemon_client.cpp  init_cuda.cu  init_cuda.cuh  ipc_utils.h  main.cpp  messages.h  test_application.cpp
device_hopper/: context.h  core.h
device_hopper/internal/: app_type.h  cl_utils.h  device.h  scheduler.h  scheduling_modes.h  slice_size_modes.h  slicing_modes.h  timing.h  utils.h
device_hopper/internal/ipc/: coordination.h
source_to_source_translator/: boiler_plate_code_for_textures_template.h  buffer_spec.py  chunked_data_transfer_template_for_continuous_access_buffers.h  chunked_data_transfer_template_for_non_random_access_buffers.h  chunked_data_transfer_template_for_random_access_buffers.h  code_to_bind_cuda_textures_template.h  continuous_access_malloc_template.h  cuda_reduction_template.h  device.py  malloc_for_indirectly_accessed_buffers_template.h  non_chunked_data_transfer_template_for_continuous_access_buffers.h  non_chunked_data_transfer_template_for_non_random_access_buffers.h  non_chunked_data_transfer_template_for_random_access_buffers.h  opencl_kernel_template.cl  openmp_reduction_template.h  reallocate_indirectly_accessed_buffers_template.h  reduction.py  template.h  transfer_data_from_device_function_call_template.h  transfer_data_from_device_function_stub_template.h  transfer_data_to_device_function_call_template.h  transfer_data_to_device_function_stub_template.h  translate_benchmarks.sh  translator.py
utils/: CMakeLists.txt  destroy_ipc.cpp  init_ipc.cpp  ocl_binary_generator.cpp  read_book_keeping_data.cpp  rodinia_nn_hurricanegen.cpp  set_device_to_unused.cpp  set_device_to_used.cpp  spmv_gen_matrices.cpp
